[package]
name = "cds-cli"
version = "0.1.0"
authors = ["James Taylor <jamest@uk.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.7"
prost = "0.6.1"
structopt = "0.3"

[build-dependencies]
prost-build = "0.6.1"
