[package]
name = "cds"
version = "0.4.0"
description = "Simple tool to manipulate Hyperledger Fabric .cds files"
authors = ["James Taylor <jamest@uk.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.7"
prost = "0.6.1"
clap = "2.33.3"

[build-dependencies]
prost-build = "0.6.1"
